# QC-notebooks

./: .gitignore  README.md  main.py  pyproject.toml
QC-Intro/: 00_qubits_and_superposition.ipynb  01_phases_and_interference.ipynb  02_gates_and_circuits.ipynb  03_algorithms_as_interference.ipynb  pyproject.toml  qc_intro_utils.py
