[project]
name = "qc-intro"
version = "0.1.0"
description = "Quantum Computing Intro — a visual, interactive notebook series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "qiskit>=2.3.1",
    "numpy>=2.0",
]
